--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="/styles/styles.css">
     </head>
     <body>
-
+            <h1>DUCK HUNT</h1>
         
         <script src="/program/app.js" async defer></script>
     </body>
