pause menu js / some css

--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&family=Press+Start+2P&display=swap" rel="stylesheet">
         </head>
-    <body>
+    <div>
             <div class="menu" id="menu">
                 <div class="title">
                     <h1>Duck Hunt</h1>
@@ -36,7 +36,7 @@
 
 
             </div>
-            <div class="pauseMenu" style="display: none;">
+            <div class="pauseMenu" id="pause" style="display: none;">
                 <button class="resume">Resume</button>
                 <button class="settings">Settings</button>
                 <button class="exit">Main Menu</button>
