shooting, update ammo and gunshot sound done

--- a/main.html
+++ b/main.html
@@ -58,19 +58,10 @@
                 </div>
                 <div class="hud" id="hud">
                     
-                    <div class="bullets">
+                    <div class="bullets" id="ammo">
                         <p>Bullets</p>
-                        <img src="/resources/sprites/bullets/pistolBullet.png" alt="" id="bullet">
-                        <img src="/resources/sprites/bullets/pistolBullet.png" alt="" id="bullet">
-                        <img src="/resources/sprites/bullets/pistolBullet.png" alt="" id="bullet">
-                        <img src="/resources/sprites/bullets/pistolBullet.png" alt="" id="bullet">
-                        <img src="/resources/sprites/bullets/pistolBullet.png" alt="" id="bullet">
-                        <img src="/resources/sprites/bullets/pistolBullet.png" alt="" id="bullet">
-                        <img src="/resources/sprites/bullets/pistolBullet.png" alt="" id="bullet">
-                        <img src="/resources/sprites/bullets/pistolBullet.png" alt="" id="bullet">
-                        <img src="/resources/sprites/bullets/pistolBullet.png" alt="" id="bullet">
-                        <img src="/resources/sprites/bullets/pistolBullet.png" alt="" id="bullet">
-                        <p>Click to reload</p>
+                        
+                        <p>Right-click to reload</p>
                     </div>
                     <div class="hit">
                         <p>Hit</p>
