fixed aspect ratio issue with background and bushes

--- a/main.html
+++ b/main.html
@@ -74,9 +74,11 @@
                 </div>
             </div>
             <div class="pauseMenu" id="pause" style="display: none;">
-                <button class="resume" id="resume">Resume</button>
-                <button class="shop" id="shop">Shop</button>
-                <button class="exit" id="exit">Main Menu</button>
+                <div>
+                    <button class="resume" id="resume">Resume</button>
+                    <button class="shop" id="shop">Shop</button>
+                    <button class="exit" id="exit">Main Menu</button>
+                </div>
             </div>
             <div class="shop" id="shopView" style="display: none">
                 <div class="shopControls">
