--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/styles/gamestyles.css">
         <link rel="stylesheet" href="/styles/menustyles.css">
+        <link rel="stylesheet" href="/styles/duck.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -51,7 +52,7 @@
             <div class="game" id="game" style="display: none;">
                 <div class="gameScreen">
                     <div class="sky" id="sky">
-                        <img src="/resources/sprites/duck/flyright.gif" alt="" id="duck" style="display: none;">
+                        <div class ="duck" id="duck" style="display: none;"></div>
                     </div>
                     <div class="grass" id="grass">
                     </div>
@@ -84,37 +85,37 @@
                 <div class="shopControls">
                     <div class="shopItems">
                         <div class="item">
-                            <img src="/resources/sprites/shopItems/duck.png" alt="">
+                            <img src="" alt="">
                             <p>Item 1</p>
                             <p>Price: 100</p>
                             <button>Buy</button>
                         </div>
                         <div class="item">
-                            <img src="/resources/sprites/shopItems/duck.png" alt="">
+                            <img src="" alt="">
                             <p>Item 2</p>
                             <p>Price: 100</p>
                             <button>Buy</button>
                         </div>
                         <div class="item">
-                            <img src="/resources/sprites/shopItems/duck.png" alt="">
+                            <img src="" alt="">
                             <p>Item 3</p>
                             <p>Price: 100</p>
                             <button>Buy</button>
                         </div>
                         <div class="item">
-                            <img src="/resources/sprites/shopItems/duck.png" alt="">
+                            <img src="" alt="">
                             <p>Item 4</p>
                             <p>Price: 100</p>
                             <button>Buy</button>
                         </div>
                         <div class="item">
-                            <img src="/resources/sprites/shopItems/duck.png" alt="">
+                            <img src="" alt="">
                             <p>Item 5</p>
                             <p>Price: 100</p>
                             <button>Buy</button>
                         </div>
                         <div class="item">
-                            <img src="/resources/sprites/shopItems/duck.png" alt="">
+                            <img src="" alt="">
                             <p>Item 6</p>
                             <p>Price: 100</p>
                             <button>Buy</button>
@@ -126,7 +127,10 @@
                 </div>
             </div>
         
-        <script src="/program/gameapp.js" async defer></script>
-        <script src="/program/menuapp.js" async defer></script>
+        <script type="module" src="/program/game.js" async defer></script>
+        <script type="module" src="/program/duck.js" async defer></script>
+        <script type="module" src="/program/player.js" async defer></script>
+        <script type="module" src="/program/weapon.js" async defer></script>
+        <script type="module" src="/program/menuapp.js" async defer></script>
     </body>
 </html>
