bullet time prototype added

--- a/main.html
+++ b/main.html
@@ -66,8 +66,18 @@
                     </div>
                     <div class="hit" id="hit">
                         <p>Hit</p>
-                        
+                        <div id="bullet-time-container">
+                            <p id="bullet-time-title">Bullet Time</p>
+                            <div id="bars-container">
+                                <div class="bullet-time-bar" id="bar1"></div>
+                                <div class="bullet-time-bar" id="bar2"></div>
+                                <div class="bullet-time-bar" id="bar3"></div>
+                                <div class="bullet-time-bar" id="bar4"></div>
+                                <div class="bullet-time-bar" id="bar5"></div>
+                            </div>
+                        </div>
                     </div>
+                    
                     <div class="score">
                         <p>Score</p>
                         <p id="score">0000000</p>
