finished carlos commit

--- a/main.html
+++ b/main.html
@@ -76,11 +76,48 @@
             </div>
             <div class="pauseMenu" id="pause" style="display: none;">
                 <div>
-                    <button class="resume" id="resume">Resume</button>
-                    <button class="shop" id="shop">Shop</button>
-                    <button class="exit" id="exit">Main Menu</button>
+                    <button class="resume" id="resume"><img src="/resources/sprites/weapons/continue.png" alt="Resume"> Resume</button>
+                    <button class="shop" id="shop"><img src="/resources/sprites/weapons/weapons.png" alt="Shop"> Shop</button>
+                    <button class="exit" id="exit"><img src="/resources/sprites/weapons/exit.png" alt="Exit"> Main Menu</button>
                 </div>
             </div>
+            <div class="shop" id="shopView" style="display: none">
+                <div class="shopControls">
+                    <div class="shopItems">
+                        <div class="item">
+                            <img src="/resources/sprites/weapons/bow.png" alt="">
+                            <p>Item 1</p>
+                            <p>Price: 100</p>
+                            <button>Buy</button>
+                        </div>
+                        <div class="item">
+                            <img src="/resources/sprites/weapons/shotgun3.png" alt="">
+                            <p>Item 2</p>
+                            <p>Price: 100</p>
+                            <button>Buy</button>
+                        </div>
+                        <div class="item">
+                            <img src="/resources/sprites/weapons/ak.png" alt="">
+                            <p>Item 3</p>
+                            <p>Price: 100</p>
+                            <button>Buy</button>
+                        </div>
+                        <div class="item">
+                            <img src="/resources/sprites/weapons/sniper.png" alt="">
+                            <p>Item 4</p>
+                            <p>Price: 100</p>
+                            <button>Buy</button>
+                        </div>
+                        <div class="item">
+                            <img src="/resources/sprites/weapons/bazooka.png" alt="">
+                            <p>Item 5</p>
+                            <p>Price: 100</p>
+                            <button>Buy</button>
+                        </div>
+                    </div>
+                    <div class="shopExit">
+                        <button id="shopExit">Exit</button>
+                    </div>
             <div class="shop" id="shopView" style="display: none">
                 <div class="shopControls">
                     <div class="shopItems">
