--- a/main.html
+++ b/main.html
@@ -90,6 +90,9 @@
                 </div>
             </div>
             <div class="pauseMenu" id="pause" style="display: none;">
+                <div class="pauseTitle">
+                    <h1>Game Paused</h1>
+                </div>
                 <div>
                     <button class="resume" id="resume"><img src="/resources/sprites/menus/continue.png" alt="Resume"> Resume</button>
                     <button class="shop" id="shop"><img src="/resources/sprites/menus/weapons.png" alt="Shop"> Shop</button>
@@ -97,35 +100,38 @@
                 </div>
             </div>
             <div class="shop" id="shopView" style="display: none">
+                <div class="shopTitle">
+                    <h1>The Shop</h1>
+                </div>
                 <div class="shopControls">
                     <div class="shopItems">
                         <div class="item">
                             <img src="/resources/sprites/weapons/bow.png" alt="">
-                            <p>Item 1</p>
+                            <p>Bow</p>
                             <p>Price: 100</p>
                             <button>Buy</button>
                         </div>
                         <div class="item">
                             <img src="/resources/sprites/weapons/shotgun3.png" alt="">
-                            <p>Item 2</p>
+                            <p>Shotgun</p>
                             <p>Price: 100</p>
                             <button>Buy</button>
                         </div>
                         <div class="item">
                             <img src="/resources/sprites/weapons/ak.png" alt="">
-                            <p>Item 3</p>
+                            <p>Machine Gun</p>
                             <p>Price: 100</p>
                             <button>Buy</button>
                         </div>
                         <div class="item">
                             <img src="/resources/sprites/weapons/sniper.png" alt="">
-                            <p>Item 4</p>
+                            <p>Sniper</p>
                             <p>Price: 100</p>
                             <button>Buy</button>
                         </div>
                         <div class="item">
                             <img src="/resources/sprites/weapons/bazooka.png" alt="">
-                            <p>Item 5</p>
+                            <p>Rocket Launcher</p>
                             <p>Price: 100</p>
                             <button>Buy</button>
                         </div>
