added crosshairs and centered them to all different weapons

--- a/main.html
+++ b/main.html
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="game" id="game" style="display: none;">
-                <div class="gameScreen">
+                <div class="gameScreen" id="gameScreen">
                     <div class="sky" id="sky">
                         <div class ="duck" id="duck" style="display: none;"></div>
                     </div>
