changed ids for music and sound elements

--- a/main.html
+++ b/main.html
@@ -41,15 +41,15 @@
                     </div>
                     <div>
                         <p id="soundToggle">Sound</p>
-                        <label for="toggle" class="musicSettings">
-                            <input type="checkbox" id="toggle">
+                        <label for="soundToggle" class="musicSettings">
+                            <input type="checkbox" id="soundToggle">
                             <span class="slider"></span>
                         </label>
                     </div>
                     <div>
                         <span class="label-text">Music</span>
-                        <label for="toggle" class="musicSettings">
-                            <input type="checkbox" id="toggle">
+                        <label for="musicToggle" class="musicSettings">
+                            <input type="checkbox" id="musicToggle">
                             <span class="slider"></span>
                         </label>
                     </div>
