--- a/main.html
+++ b/main.html
@@ -43,17 +43,16 @@
                         
                     </div>
                     <div>
-                        <p id="soundToggle">Sound</p>
+                        <p class="label-text" id="soundToggle">Sound</p>
                         <label for="soundToggle" class="musicSettings">
-                            <input type="checkbox" id="soundToggle">
+                            <input type="checkbox" id="toggle">
                             <span class="slider"></span>
                         </label>
                     </div>
                     <div>
-
-                        <span class="label-text">Music</span>
-                        <label for="musicToggle" class="musicSettings">
-                            <input type="checkbox" id="musicToggle">
+                        <p class="label-text" id="musicToggle">Music</p>
+                        <label for="toggle" class="musicSettings">
+                            <input type="checkbox" id="toggle">
                             <span class="slider"></span>
                         </label>
                     </div>
