fixed sound and music toggle issue

--- a/main.html
+++ b/main.html
@@ -43,16 +43,22 @@
                         
                     </div>
                     <div>
-                        <p class="label-text" id="soundToggle">Sound</p>
-                        <label for="soundToggle" class="musicSettings">
+                        <div class="tooltip-container">
+                            <span class="tooltip">Turn your Sound On or Off</span>
+                            <p class="text" id="soundToggle">Sound</p>
+                        </div>
+                        <label for="toggle" class="musicSettings">
                             <input type="checkbox" id="toggle">
                             <span class="slider"></span>
                         </label>
                     </div>
                     <div>
-                        <p class="label-text" id="musicToggle">Music</p>
-                        <label for="toggle" class="musicSettings">
-                            <input type="checkbox" id="toggle">
+                        <div class="tooltip-container">
+                            <span class="tooltip">Turn your Music On or Off</span>
+                            <p class="text" id="soundToggle">Music</p>
+                        </div>
+                        <label for="toggle2" class="musicSettings">
+                            <input type="checkbox" id="toggle2">
                             <span class="slider"></span>
                         </label>
                     </div>
